Fixed Scrollbar on goal cards and Styles

--- a/src/Components/Goal/GoalForm.module.css
+++ b/src/Components/Goal/GoalForm.module.css
@@ -15,10 +15,6 @@
   background: #a3cd9e;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #e5f1e3;
-}
 .goalform {
   padding: 30px;
   margin: 10px auto;
